root/etc/ip6tables.rules
# Generated by xtables-save v1.8.2 on Sat Oct 30 14:18:23 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Sat Oct 30 14:18:23 2021
# Generated by xtables-save v1.8.2 on Sat Oct 30 14:18:23 2021
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -p udp -m udp --dport 20001:20007 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 30001:30007 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 30051:30057 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 30061:30064 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 40000 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 55550:55580 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 62031 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 62030 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 42000:43000 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --sport 42001 --dport 62500 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 41000:41010 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 41400 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 42400 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 41400 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --sport 14050 -j DSCP --set-dscp 0x2e
COMMIT
# Completed on Sat Oct 30 14:18:23 2021
# Generated by xtables-save v1.8.2 on Sat Oct 30 14:18:23 2021
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
:LOGNDROP - [0:0]
-A INPUT -m rt --rt-type 0 -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -s fe80::/10 -j ACCEPT
-A INPUT -d ff00::/8 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -p udp -m udp --dport 10022 -j ACCEPT
-A INPUT -p udp -m udp --dport 2460 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -d ff02::fb/128 -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -p udp -m udp --dport 138 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -s fe80::/64 -d fe80::/64 -p udp -m udp --sport 1900 -j ACCEPT
-A INPUT -p udp -m udp --dport 20001:20007 -j ACCEPT
-A INPUT -p udp -m udp --dport 30001:30007 -j ACCEPT
-A INPUT -p udp -m udp --dport 30051:30057 -j ACCEPT
-A INPUT -p udp -m udp --dport 30061:30064 -j ACCEPT
-A INPUT -p udp -m udp --dport 40000 -j ACCEPT
-A INPUT -p udp -m udp --sport 42000:43000 --dport 1024:65535 -j ACCEPT
-A INPUT -p udp -m udp --sport 52000 --dport 1024:65535 -j ACCEPT
-A INPUT -p udp -m udp --sport 41000:41010 --dport 32768:60999 -j ACCEPT
-A INPUT -j LOGNDROP
-A OUTPUT -m rt --rt-type 0 -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -s fe80::/10 -j ACCEPT
-A OUTPUT -d ff00::/8 -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9418 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d ff02::fb/128 -p udp -m udp --dport 5353 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 137 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 138 -j ACCEPT
-A OUTPUT -s fe80::/64 -d fe80::/64 -p udp -m udp --dport 1025:65535 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9007 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 14580 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 20001 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 20001:20007 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 30001:30007 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 30051:30057 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 30061:30064 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 40000 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 55550:55580 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 62031 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 62030 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 42000:43000 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 42001 --dport 62500 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 41000:41010 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 41400 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 42400 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 41400 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 14050 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 43434 -j ACCEPT
-A LOGNDROP -j DROP
COMMIT
# Completed on Sat Oct 30 14:18:23 2021
