root/etc/iptables.rules
# Generated by xtables-save v1.8.2 on Sat Oct 30 14:18:22 2021
*nat
:PREROUTING ACCEPT [157:11094]
:INPUT ACCEPT [137:9268]
:POSTROUTING ACCEPT [239:15968]
:OUTPUT ACCEPT [244:16268]
-A POSTROUTING -s 192.168.50.0/24 ! -d 192.168.50.0/24 -j MASQUERADE
COMMIT
# Completed on Sat Oct 30 14:18:22 2021
# Generated by xtables-save v1.8.2 on Sat Oct 30 14:18:22 2021
*mangle
:PREROUTING ACCEPT [9366:11078762]
:INPUT ACCEPT [9348:11077056]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5636:821039]
:POSTROUTING ACCEPT [5662:824028]
-A POSTROUTING -p udp -m udp --dport 20000 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 20001:20007 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 30001:30007 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 30051:30057 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 30061:30064 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 40000 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 55550:55580 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 62031 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 62030 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 42000:43000 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --sport 42001 --dport 62500 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 41000:41010 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 41720 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 41400 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 42400 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --dport 41500 -j DSCP --set-dscp 0x2e
-A POSTROUTING -p udp -m udp --sport 14050 -j DSCP --set-dscp 0x2e
COMMIT
# Completed on Sat Oct 30 14:18:22 2021
# Generated by xtables-save v1.8.2 on Sat Oct 30 14:18:22 2021
*filter
:INPUT DROP [7:1788]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [9:1546]
:LOGNDROP - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 20000 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -p udp -m udp --dport 20000 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p udp -m udp --dport 20000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p udp -m udp --dport 10022 -j ACCEPT
-A INPUT -p udp -m udp --dport 2460 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -i wlan0_ap -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -s 192.168.50.0/24 ! -d 192.168.50.0/24 -i wlan0_ap -j ACCEPT
-A INPUT -s 192.168.50.0/24 -d 192.168.50.1/32 -i wlan0_ap -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -p udp -m udp --dport 137:138 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -p udp -m udp --dport 68 -j ACCEPT
-A INPUT -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p udp -m udp --sport 1900 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -p udp -m udp --sport 1900 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p udp -m udp --sport 1900 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 20001:20007 -j ACCEPT
-A INPUT -p udp -m udp --dport 30001:30007 -j ACCEPT
-A INPUT -p udp -m udp --dport 30051:30057 -j ACCEPT
-A INPUT -p udp -m udp --dport 30061:30064 -j ACCEPT
-A INPUT -p udp -m udp --dport 40000 -j ACCEPT
-A INPUT -p udp -m udp --sport 42000:43000 --dport 1024:65535 -j ACCEPT
-A INPUT -p udp -m udp --sport 52000 --dport 1024:65535 -j ACCEPT
-A INPUT -p udp -m udp --sport 41000:41010 --dport 32768:60999 -j ACCEPT
-A INPUT -j LOGNDROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9418 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9007 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 14580 -j ACCEPT
-A OUTPUT -d 176.10.105.252/32 -p tcp -m tcp --dport 20001 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -p tcp -m tcp --dport 20001 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p udp -m udp --dport 20000 -j ACCEPT
-A OUTPUT -d 172.16.0.0/12 -p udp -m udp --dport 20000 -j ACCEPT
-A OUTPUT -d 10.0.0.0/8 -p udp -m udp --dport 20000 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 20001:20007 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 30001:30007 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 30051:30057 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 30061:30064 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 40000 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 55550:55580 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 62031 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 5040 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 62030 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 42000:43000 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 42001 --dport 62500 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 41000:41010 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 41720 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 41400 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 42400 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 41500 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 14050 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 43434 -j ACCEPT
-A OUTPUT -o wlan0_ap -p udp -m udp --dport 67:68 -j ACCEPT
-A OUTPUT -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 137:138 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 67:68 -j ACCEPT
-A OUTPUT -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A OUTPUT -d 192.168.0.0/16 -p tcp -m tcp --dport 1025:65535 -j ACCEPT
-A OUTPUT -d 172.16.0.0/12 -p tcp -m tcp --dport 1025:65535 -j ACCEPT
-A OUTPUT -d 10.0.0.0/8 -p tcp -m tcp --dport 1025:65535 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A LOGNDROP -j DROP
COMMIT
# Completed on Sat Oct 30 14:18:22 2021
